# fansipan-afs

./: .gitignore  CHANGELOG.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
schemas/: category_schema.json  detection_config_schema_0.1.json  detection_config_schema_0.2.json  featureinstance_schema_0.1.json  featureinstance_schema_0.2.json
src/fansipan_afs/: afs_api.py  afs_change.py  afs_datamodels.py  afs_domaincategory.py  afs_naming.py  afs_transform.py  gen_afs_schemas.py
tests/: test_afs.py
