[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "fansipan_afs"
authors = [
  {name="Linh Truong, Nguyen Ngoc Nhu Trang, Daienso Lab", email="contact@daienso.com" },
]
description = "Basic data models of the Analytics Feature Space for ML Detection"
version = "0.0.1"
readme = "README.md"
license = {file = "LICENSE"}
keywords=['python', 'daienso', 'fansipan','afs']
requires-python = ">=3.9"
classifiers = [
    'Development Status :: 3 - Alpha',
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies= [
    "pydantic>=2.7.1",
    "PyYAML>=6.0.1"
]

[project.optional-dependencies]

[project.scripts]

[tool.setuptools.dynamic]

[tool.setuptools.packages.find]
where = ["src"]
include = ["fansipan_afs*"] 
exclude = ["tests*"] 
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests"
]

[tool.pylint.imports]
allowed-wildcard-imports = [
    "numpy",
    "pandas"
]
[tool.pylint.format]
max-line-length = 120

[project.urls]
Homepage = "https://www.daienso.com"
Support = "https://www.daienso.com"